--- a/rlst-pokedex/package.json
+++ b/rlst-pokedex/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "postinstall": "ng build  --aot --prod",
+  "engines": {
+    "node": "14.10.0",
+    "npm": "6.14.8"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +27,7 @@
     "@angular/router": "~10.1.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.2",
     "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
